.provarCaches/00D5f000005vwGkEAI/objects/rstkf__payto__c.object
<CustomObject>
    <description>payto__c</description>
    <fields>
        <fullName>rstkf__payto_amtwht__c</fullName>
        <description>WHT Amount</description>
        <label>WHT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_apinvtxncr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vendor Credit Transaction</description>
        <label>Vendor Credit Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Payment Selection Add Transaction (Vendor Credit Transaction)</relationshipLabel>
        <relationshipName>paytoes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_apinvtxndr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vendor Debit / Invoice Transaction</description>
        <label>Vendor Debit / Invoice Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Payment Selection Add Transaction</relationshipLabel>
        <relationshipName>paytos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_applyamt__c</fullName>
        <description>Application Amount</description>
        <label>Application Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_checkdate__c</fullName>
        <description>Payment Date</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_checknumber__c</fullName>
        <description>Check Number</description>
        <label>Check Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_disctknamt__c</fullName>
        <description>Discount Taken Amount</description>
        <label>Discount Taken Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_doterms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Take Advantage of Terms Discount</description>
        <label>Take Advantage of Terms Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_error__c</fullName>
        <description>Error String</description>
        <label>Error String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_exchrate__c</fullName>
        <description>payto_exchrate__c</description>
        <inlineHelpText>This field allows for the override of the exchange rate that will be used between the Payment (Transaction) Currency and the Bank Currency from which the payment is made.</inlineHelpText>
        <label>Override Payment Exchange Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_exppaydate__c</fullName>
        <description>Expected Payment Date (for Discounts)</description>
        <label>Expected Payment Date (for Discounts)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_glbankacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bank Account</description>
        <label>Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Payment Selection Add Transaction</relationshipLabel>
        <relationshipName>paytos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Payment Selection Add Transaction</relationshipLabel>
        <relationshipName>paytos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_netpayamt__c</fullName>
        <description>Payment Amount</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_paysession__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment Session</description>
        <label>Payment Session</label>
        <referenceTo>rstkf__paysession__c</referenceTo>
        <relationshipLabel>Payment Selection Add Transaction</relationshipLabel>
        <relationshipName>paytos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_paytype__c</fullName>
        <description>Payment Type</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Bank Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__payto_status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Processed</fullName>
                </value>
                <value>
                    <fullName>Processed Successfully</fullName>
                </value>
                <value>
                    <fullName>Errors Prevent Processing</fullName>
                </value>
                <value>
                    <fullName>Processed with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__payto_syforexschedno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>payto_syforexschedno__c</description>
        <inlineHelpText>This field carries the Override Exchange Rate Schedule to be used for the override of the exchange rate  between the Payment (Transaction) Currency and the Bank Currency from which the payment is made.</inlineHelpText>
        <label>Override Payment Exchange Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Payment Selection Add Transaction</relationshipLabel>
        <relationshipName>paytos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__payto_trantype__c</fullName>
        <description>Transaction Type</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Vendor Credit Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Selection Add Transaction</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__payto_trantype__c</columns>
        <columns>rstkf__payto_netpayamt__c</columns>
        <columns>rstkf__payto_disctknamt__c</columns>
        <columns>rstkf__payto_applyamt__c</columns>
        <columns>rstkf__payto_status__c</columns>
        <columns>rstkf__payto_apinvtxndr__c</columns>
        <columns>rstkf__payto_apinvtxncr__c</columns>
        <columns>rstkf__payto_paysession__c</columns>
        <columns>rstkf__payto_error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Selection Add Transaction  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Selection Add Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>